// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<CreateSESSender/> spec handles failed requests 1`] = `
<div
  class="euiText euiText--small"
>
  <h1>
    Edit SES sender
  </h1>
</div>
`;

exports[`<CreateSESSender/> spec renders the component 1`] = `
<div
  class="euiText euiText--small"
>
  <h1>
    Create SES sender
  </h1>
</div>
`;

exports[`<CreateSESSender/> spec renders the component for editing 1`] = `
<div
  class="euiText euiText--small"
>
  <h1>
    Edit SES sender
  </h1>
</div>
`;
